Added and expanded recipes

--- a/recipes/alfredo.html
+++ b/recipes/alfredo.html
@@ -11,31 +11,36 @@
 <h2>Ingredients</h2>
 
 <ul>
-    <li>Butter</li>
-    <li>Heavy whipping cream</li>
-    <li>Parmesan cheese</li>
-    <li>Black pepper</li>
-    <li>Garlic powder or minced garlic</li>
-    <li>Paprika</li>
-    <li>Cumin</li>
-    <li>Italian seasoning</li>
-    <li>Sun-dried tomatoes</li>
+    <li>1 tbsp salted butter</li>
+    <li>1 cup heavy whipping cream</li>
+    <li>1/2 cup Parmesan cheese</li>
+    <li>1/2tsp black pepper</li>
+    <li>1/2tsp garlic powder or mminced garlic</li>
+    <li>1/2tsp paprika</li>
+    <li>1/4tsp cumin</li>
+    <li>1/4tsp Italian seasoning</li>
+    <li>3tbsp sun-dried tomatoes</li>
 </ul>
 
 <h2>Steps</h2>
 <ol>
     <li>To a medium hot pan, add the butter until melted</li>
     <li>Add heavy whipping cream and wait until barely simmering</li>
-    <li>Add all the seasonings, making sure to exclude the parmesan cheese and
+    <li>Add all the seasonings, excluding the parmesan cheese and
         sundried tomatoes</li>
     <li>Wisk ingredients until thoroughly combined and bring back to a simmer</li>
     <li>Once simmering, reduce the heat and add parmesan cheese, making sure to
         wisk away any clumps</li>
-    <li>Once simmering again, add sundried tomatoes and lower heat to 
-        low, and allow to thicken</li>
+    <li>Add sundried tomatoes and drop heat to low, allowing the sauce to
+        thicken for a few minutes.*
+    </li>
     <li>Once thickened to likened consistency (typically until coating 
-        the back of a spoon) turn off heat and serve over desired pasta</li>
+        the back of a spoon) turn off heat and serve over desired dish</li>
 </ol>
+<p>
+    <em>*Make sure to scrape the sides of the pot to prevent the cream from sticking 
+    or drying.</em>
+</p>
 <a href="../index.html">Return to homepage</a>
 <a href="../recipes/pesto.html">Next recipe: Basil Pesto</a>
 
