--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
         <h2>Check out these recipes!</h2>
         <ul>
             <li>
-                 <a href="recipes/alfredo.html">alfredo sauce</a>
+                 <a href="recipes/alfredo.html">Alfredo Sauce</a>
             </li>
             <li>
                 <a href="recipes/pesto.html">basil pesto</a>
             </li>
             <li>
                 <a href="recipes/grilled-cheese.html">grilled cheese sandwhich</a>
+            </li>
+            <li>
+                <a href="../odin-recipes/recipes/cc-french-toast.html">Cap'n Crunch
+                    French Toast</a>
+            </li>
+            <li>
+                <a href="../odin-recipes/recipes/whipped-cream.html">Homemade Whipped Cream</a>
             </li>
         </ul>
 
