--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                  <a href="recipes/alfredo.html">Alfredo Sauce</a>
             </li>
             <li>
-                <a href="recipes/pesto.html">basil pesto</a>
+                <a href="recipes/pesto.html">Basil Pesto</a>
             </li>
             <li>
-                <a href="recipes/grilled-cheese.html">grilled cheese sandwhich</a>
+                <a href="recipes/grilled-cheese.html">Grilled Cheese Sandwhich</a>
             </li>
             <li>
                 <a href="../odin-recipes/recipes/cc-french-toast.html">Cap'n Crunch
