added homepage link

--- a/recipes/cc-french-toast.html
+++ b/recipes/cc-french-toast.html
@@ -73,3 +73,5 @@ blueberries, blackberries, banana slices, and an apple slice.">
 
 <p><em>*This recipe can be tweaked by using your favorite cereal in place of Cap'n Crunch! Enjoy!</em> 
 </p>
+
+<h4><a href="../index.html">Homepage</a></h4>
