--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Odin Recipes</h1>
         <img src="https://pyxis.nymag.com/v1/imgs/f64/19b/51c95f648d95243cff731b6bd097cb058d-slt-online-culinary-institute.rhorizontal.w700.jpg"
         alt="white woman leaning over counter with food on a cutting board, reaching for a laptop">
         
