added head and body tags, title class

--- a/recipes/alfredo.html
+++ b/recipes/alfredo.html
@@ -1,15 +1,22 @@
-<h1>alfredo sauce</h1>
-<img src="../pics/alfredo.jpg" alt="glass jar with alfredo dripping off the side">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Alfredo Sauce</title>
+    <link rel="stylesheet" href="../styles.css"
+</head>
+<body>
+<h1 class="title">Alfredo Sauce</h1>
+<img src="../pics/alfredo.jpg" alt="glass jar with alfredo sauce dripping off the side">
 
 <h2>Description</h2>
 
 <p>This recipe came together after many different attempts at alfredo sauce
     with many of them resulting in either runny sauce or parmesan soup.</p>
-
 <p>This twist on alfredo can not get any better.</p>
 
 <h2>Ingredients</h2>
-
 <ul>
     <li>1 tbsp salted butter</li>
     <li>1 cup heavy whipping cream</li>
@@ -43,4 +50,9 @@
 </p>
 <a href="../index.html">Return to homepage</a>
 <a href="../recipes/pesto.html">Next recipe: Basil Pesto</a>
+
+</body>
+
+</html>
+
 
