changed and added class

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="../odin-recipes/styles.css">
     </head>
     <body>
         <h1 class="title">Odin Recipes</h1>
         <img src="https://pyxis.nymag.com/v1/imgs/f64/19b/51c95f648d95243cff731b6bd097cb058d-slt-online-culinary-institute.rhorizontal.w700.jpg"
         alt="white woman leaning over counter with food on a cutting board, reaching for a laptop">
         
-        <h2>Check out these recipes!</h2>
-        <ul>
+        <h2 class="subtitle">Check out these recipes!</h2>
+        <ul class="bullets">
             <li>
                  <a href="recipes/alfredo.html">Alfredo Sauce</a>
             </li>
