--- a/recipes/alfredo.html
+++ b/recipes/alfredo.html
@@ -10,27 +10,27 @@
 <h1 class="title">Alfredo Sauce</h1>
 <img src="../pics/alfredo.jpg" alt="glass jar with alfredo sauce dripping off the side">
 
-<h2>Description</h2>
+<h2 class="recipe-subtitle">Description</h2>
 
 <p>This recipe came together after many different attempts at alfredo sauce
     with many of them resulting in either runny sauce or parmesan soup.</p>
 <p>This twist on alfredo can not get any better.</p>
 
-<h2>Ingredients</h2>
-<ul>
+<h2 class="recipe-subtitle">Ingredients</h2>
+<ul class="recipe-bullets">
     <li>1 tbsp salted butter</li>
     <li>1 cup heavy whipping cream</li>
     <li>1/2 cup Parmesan cheese</li>
     <li>1/2tsp black pepper</li>
-    <li>1/2tsp garlic powder or mminced garlic</li>
+    <li>1/2tsp garlic powder or minced garlic</li>
     <li>1/2tsp paprika</li>
     <li>1/4tsp cumin</li>
     <li>1/4tsp Italian seasoning</li>
     <li>3tbsp sun-dried tomatoes</li>
 </ul>
 
-<h2>Steps</h2>
-<ol>
+<h2 class="recipe-subtitle">Steps</h2>
+<ol class="recipe-text">
     <li>To a medium hot pan, add the butter until melted</li>
     <li>Add heavy whipping cream and wait until barely simmering</li>
     <li>Add all the seasonings, excluding the parmesan cheese and
