added stylesheet and removed class

--- a/recipes/cc-french-toast.html
+++ b/recipes/cc-french-toast.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>French Toast</title>
+    <link rel="stylesheet" href="../styles.css">
+</head>
+<body>
+
 <h1>Cap'n Crunch French Toast</h1>
 
 <img src="../pics/bluemooncafe.jpg" alt="three pieces of stacked french toast on a 
@@ -18,60 +27,35 @@ blueberries, blackberries, banana slices, and an apple slice.">
 
 <h2>Ingredients</h2>
 <p><em>Makes 4 to 5 servings!</em></p>
-<ul>
-    <li>
-     3/4c heavy whipping cream   
-    </li>
-    <li>
-        3 large eggs, lightly beaten
-    </li>
-    <li>
-        2tbsp sugar
-    </li>
-    <li>
-        3 cups Cap'n Crunch cereal*
-    </li>
-    <li>
-        8 to 10 thick slices of bread, such as Texas Toast or French bread
-    </li>
-    <li>
-        Butter for cooking
-    </li>
-    <li>
-        <a href="../recipes/whipped-cream.html">Whipped cream for topping</a>
-    </li>
-    <li>
-        2 cups of assorted fresh seasonal berries
-    </li>
+<ul class="recipe-bullets">
+    <li>3/4c heavy whipping cream</li>
+    <li>3 large eggs, lightly beaten</li>
+    <li>2tbsp sugar</li>
+    <li>3 cups Cap'n Crunch cereal*</li>
+    <li>8 to 10 thick slices of bread, such as Texas Toast or French bread</li>
+    <li>Butter for cooking</li>
+    <li> <a href="../recipes/whipped-cream.html">Whipped cream for topping</a></li>
+    <li>2 cups of assorted fresh seasonal berries</li>
 </ul>
 
 <h2>Directions</h2>
 
-<ol>
-    <li>
-        Mix the cream, eggs, sugar and vanilla in a large bowl and whisk until combined;
-        set aside.
-    </li>
-    <li>
-        Put the cereal in a storage bag and using a rolling pin, cruch the cereal until 
-        it resembles cracker meal. Transfer the cereal to a shallow dish.
-    </li>
-    <li>
-        Dip the slices of bread into the cream mixture until soft but not completely soaked. 
-        Let excess liquid drip off, then press into cereal crumbs to coat evenly.
-    </li>
-    <li>
-        Heat a large skillet or griddle over medium heat and add butter as needed.
-    </li>
-    <li>
-        Cook the bread until caramelized on both sides, about 6 to 8 minutes total.
-    </li>
-    <li>
-        Add a dollop of whipped cream on top and serve with berries.
-    </li>
+<ol class="recipe-text">
+    <li>Mix the cream, eggs, sugar and vanilla in a large bowl and whisk until combined;
+    set aside.</li>
+    <li>Put the cereal in a storage bag and using a rolling pin, cruch the cereal until 
+    it resembles cracker meal. Transfer the cereal to a shallow dish.</li>
+    <li>Dip the slices of bread into the cream mixture until soft but not completely soaked. 
+    Let excess liquid drip off, then press into cereal crumbs to coat evenly.</li>
+    <li>Heat a large skillet or griddle over medium heat and add butter as needed.</li>
+    <li>Cook the bread until caramelized on both sides, about 6 to 8 minutes total.</li>
+    <li>Add a dollop of whipped cream on top and serve with berries.</li>
 </ol>
 
 <p><em>*This recipe can be tweaked by using your favorite cereal in place of Cap'n Crunch! Enjoy!</em> 
 </p>
 
-<h4><a href="../index.html">Homepage</a></h4>
+<a href="../index.html">Homepage</a></h4>
+<a href="../recipes/whipped-cream.html">Whipped Cream</a>
+</body>
+</html>
