--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -1,28 +1,40 @@
-<h1>grilled cheese sandwich</h1>
-<img src="../pics/grilledcheese.jpg" alt="grilled cheese on a plate with grill 
-marks on the bread">
-<h2>Description</h2>
-<p>Grilled cheeses used to be a staple dish in the home a few years back.
-    This dish is simple and easy to make in a pinch when you're short 
-    on time or simply not in the mood to make anything else.</p>
-<h2>Ingredients</h2>
-<ul>
-    <li>2 slices of bread of your choosing</li>
-    <li>Preffered cheese</li>
-    <li>Mayonaisse</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Grilled Cheese</title>
+    <link rel="stylesheet" href="../styles.css">
+</head>
 
-<h2>Steps</h2>
-<ol>
-    <li>Preheat your pan</li>
-    <li>Lightly coat one side of each slice of bread with mayo</li>
-    <li>Add one slice of bread, mayo side down, to the pan</li>
-    <li>Immediately add cheese to slice and put second slice of bread, mayo side 
+<body>
+    <h1>Grilled Cheese Sandwich</h1>
+    <img src="../pics/grilledcheese.jpg" alt="grilled cheese on a plate with grill 
+        marks on the bread">
+    <h2>Description</h2>
+        <p>Grilled cheeses used to be a staple dish in the home a few years back.
+        This dish is simple and easy to make in a pinch when you're short 
+        on time or simply not in the mood to make anything else.</p>
+    <h2>Ingredients</h2>
+    <ul class="recipe-bullets">
+        <li>2 slices of bread of your choosing</li>
+        <li>Preffered cheese</li>
+        <li>Mayonaisse</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol class="recipe-text">
+        <li>Preheat your pan</li>
+        <li>Lightly coat one side of each slice of bread with mayo</li>
+        <li>Add one slice of bread, mayo side down, to the pan</li>
+        <li>Immediately add cheese to slice and put second slice of bread, mayo side 
         up, against the cheese</li>
-    <li>Wait until the bread gets golden brown and flip</li>
-    <li>When both sides are golden brown, remove from heat and enjoy 
+        <li>Wait until the bread gets golden brown and flip</li>
+        <li>When both sides are golden brown, remove from heat and enjoy 
         with sauce of your choosing, or none at all</li>
-</ol>
+    </ol>
 
-<a href="../index.html">Return to homepage</a>
-<a href="../recipes/alfredo.html">Next recipe: Alfredo sauce</a>
+    <a href="../index.html">Return to homepage</a>
+    <a href="../recipes/alfredo.html">Next recipe: Alfredo sauce</a>
+</body>
+
+</html>
