--- a/recipes/pesto.html
+++ b/recipes/pesto.html
@@ -17,7 +17,7 @@ alt="white clunky bowl of green basil pesto with oil on a metallic spoon with lo
     been wanting to try it for years. I finally got around to make it and 
     I am now obsessed.</p>
 <h2>Ingredients</h2>
-<ul>
+<ul class="recipe-bullets">
     <li>one container of fresh basil leaves</li>
     <li>one bag of pine nuts</li>
     <li>3/4 cup of olive oil (the better the quality the less you'll need)</li>
@@ -26,7 +26,7 @@ alt="white clunky bowl of green basil pesto with oil on a metallic spoon with lo
 </ul>
 
 <h2>Steps</h2>
-<ol>
+<ol class="recipe-text">
     <li>To a food processor, add all of the ingredients with half of the oil</li>
     <li>Blend the pesto and add oil accordingly, until desired consistency is 
         reached, thick like a paste or runny like a sauce</li>
