--- a/recipes/whipped-cream.html
+++ b/recipes/whipped-cream.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Homemade Whipped Cream</title>
+    <link rel="stylesheet" href="../styles.css">
+</head>
+<body>
+
 <h1>Quick and Easy Homemade Whipped Cream</h1>
 
 <img src="https://storcpdkenticomedia.blob.core.windows.net/media/recipemanagementsystem/media/recipe-media-files/recipes/retail/x17/2020_df_retail_sweetened-whipped-cream_142836998_600x600.jpg?ext=.jpg"
@@ -5,59 +14,47 @@ alt="thick whipped cream in a white bowl with a light brown background">
 
 <h2>Description</h2>
 
-<p>
-This is one of the simplest ways to make homemade whipped cream, without
+<p>This is one of the simplest ways to make homemade whipped cream, without
 the hassle of bringing out the mixer! All it takes is a few minutes and a willing arm.
 </p>
 
-<h2>
-    Ingredients
-</h2>
+<h2>Ingredients</h2>
 
-<ul>
-    <li>
-        Mason jar with lid (jar big enough to leave half empty)
-    </li>
-    <li>
-       1/2 cup of heavy whipping cream
-    </li>
-    <li>
-        Powdered sugar to taste (normal sugar works fine too!)
-    </li>
-    <li>
-        1tsp vanilla paste or vanilla extract (optional)
-    </li>
+<ul class="recipe-bullets">
+    <li>Mason jar with lid (jar big enough to leave half empty)</li>
+    <li>1/2 cup of heavy whipping cream</li>
+    <li>Powdered sugar to taste (normal sugar works fine too!)</li>
+    <li>1tsp vanilla paste or vanilla extract (optional)</li>
 </ul>
 
 <h2>
     Directions
 </h2>
 
-<ol>
-    <li>
-        Pour the ingredients into the mason jar and cover tight with lid
-    </li>
-    <li>
-        Shake until you can't feel the liquid moving inside (about 3 minutes of constant motion)
-    </li>
-    <li>
-        Open jar and check the texture. If the cream is too runny, keep shaking!*
-    </li>
-    <li>
-        Once the desired texture is reached, serve and eat within the next 20 minutes.
-    </li>
+<ol class="recipe-text">
+    <li>Pour the ingredients into the mason jar and cover tight with lid</li>
+    <li>Shake until you can't feel the liquid moving inside (about 3 minutes of
+    constant motion)</li>
+    <li>Open jar and check the texture. If the cream is too runny,
+    keep shaking!*</li>
+    <li>Once the desired texture is reached, serve and eat within the next 20 
+    minutes.</li>
 </ol>
 
-<p>
-    You can leave the whipped cream in the jar and shake periodically to keep the texture from softening.
+<p>You can leave the whipped cream in the jar and shake periodically to keep the
+    texture from softening.
 </p>
 
 <p>
     *Make sure you don't over-shake the cream! Doing so will turn the whipped cream into butter.
 </p>
-<h3>
-    Check out the accompanying recipe!
+<h3>Check out the accompanying recipe!
 </h3>
 
+<a href="../index.html">Homepage</a>
 <a href="../recipes/cc-french-toast.html">Cap'n Crunch French Toast</a>
+
+</body>
+
+</html>
 
