--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="https://pyxis.nymag.com/v1/imgs/f64/19b/51c95f648d95243cff731b6bd097cb058d-slt-online-culinary-institute.rhorizontal.w700.jpg"
         alt="white woman leaning over counter with food on a cutting board, reaching for a laptop">
         
-        <h2 class="subtitle">Check out these recipes!</h2>
+        <h2>Check out these recipes!</h2>
         <ul>
             <li>
                  <a href="recipes/alfredo.html">Alfredo Sauce</a>
